fix dark mode app loc2glob

--- a/_static/app/loc2glob/main.css
+++ b/_static/app/loc2glob/main.css
@@ -29,72 +29,182 @@ div.app-local-to-global svg g.all_triangles polygon[data-active="0"][data-indexi
   stroke-opacity:0.1;
 }
 
+/* Dark mode */
 @media (prefers-color-scheme: dark) {
+  body:not([data-theme="light"])
   div.app-local-to-global{
     background-color: var(--dark_background_color);
   }
+  body:not([data-theme="light"])
   div.app-local-to-global p{
     color: var(--dark_foreground_color);
   }
+  body:not([data-theme="light"])
   div.app-local-to-global svg g.all_triangles polygon.d3_triangle{
     stroke: var(--dark_stroke_color);
   }
+  body:not([data-theme="light"])
   div.app-local-to-global svg g.all_pts circle{
     fill: var(--dark_background_color);
     stroke: var(--dark_stroke_color);
   }
+  body:not([data-theme="light"])
   div.app-local-to-global svg g.all_pts text{
     fill: var(--dark_foreground_color);
   }
+  body:not([data-theme="light"])
   div.app-local-to-global svg g.all_pts g.d3_point[data-indexing="global"] circle{
     fill: var(--dark_background_color);
   }
+  body:not([data-theme="light"])
   div.app-local-to-global svg g.all_pts g.d3_point[data-indexing="local"] circle{
     fill: var(--dark_point_local_color);
   }
+  body:not([data-theme="light"])
   div.app-local-to-global svg g.all_triangles polygon[data-active="1"],
+  body:not([data-theme="light"])
   div.app-local-to-global svg g.all_triangles polygon[data-active="0"]:hover{
       fill: var(--dark_triangle_active_color);
   }
+  body:not([data-theme="light"])
   div.app-local-to-global svg g.all_triangles polygon[data-active="0"]{
     fill: var(--dark_triangle_inactive_color);
   }
 }
+body[data-theme="dark"]
+div.app-local-to-global{
+  background-color: var(--dark_background_color);
+}
+body[data-theme="dark"]
+div.app-local-to-global p{
+  color: var(--dark_foreground_color);
+}
+body[data-theme="dark"]
+div.app-local-to-global svg g.all_triangles polygon.d3_triangle{
+  stroke: var(--dark_stroke_color);
+}
+body[data-theme="dark"]
+div.app-local-to-global svg g.all_pts circle{
+  fill: var(--dark_background_color);
+  stroke: var(--dark_stroke_color);
+}
+body[data-theme="dark"]
+div.app-local-to-global svg g.all_pts text{
+  fill: var(--dark_foreground_color);
+}
+body[data-theme="dark"]
+div.app-local-to-global svg g.all_pts g.d3_point[data-indexing="global"] circle{
+  fill: var(--dark_background_color);
+}
+body[data-theme="dark"]
+div.app-local-to-global svg g.all_pts g.d3_point[data-indexing="local"] circle{
+  fill: var(--dark_point_local_color);
+}
+body[data-theme="dark"]
+div.app-local-to-global svg g.all_triangles polygon[data-active="1"],
+body[data-theme="dark"]
+div.app-local-to-global svg g.all_triangles polygon[data-active="0"]:hover{
+    fill: var(--dark_triangle_active_color);
+}
+body[data-theme="dark"]
+div.app-local-to-global svg g.all_triangles polygon[data-active="0"]{
+  fill: var(--dark_triangle_inactive_color);
+}
 
+/* Light mode */
 @media (prefers-color-scheme: light) {
+  body:not([data-theme="dark"])
   div.app-local-to-global p{
     color: var(--light_foreground_color);
   }
+  body:not([data-theme="dark"])
   div.app-local-to-global p{
     color: var(--light_foreground_color);
   }
+  body:not([data-theme="dark"])
   div.app-local-to-global svg g.all_triangles polygon.d3_triangle{
     stroke: var(--light_stroke_color);
   }
+  body:not([data-theme="dark"])
   div.app-local-to-global svg g.all_pts circle{
     fill: var(--light_background_color);
     stroke: var(--light_stroke_color);
   }
+  body:not([data-theme="dark"])
   div.app-local-to-global svg g.all_pts text{
     fill: var(--light_foreground_color);
   }
+  body:not([data-theme="dark"])
   div.app-local-to-global svg g.all_pts g.d3_point[data-indexing="global"] circle{
     fill: var(--light_background_color);
   }
+  body:not([data-theme="dark"])
   div.app-local-to-global svg g.all_pts g.d3_point[data-indexing="global"] text{
     fill: var(--light_point_txt_color);
   }
+  body:not([data-theme="dark"])
   div.app-local-to-global svg g.all_pts g.d3_point[data-indexing="local"] circle{
     fill: var(--light_point_local_color);
   }
+  body:not([data-theme="dark"])
   div.app-local-to-global svg g.all_pts g.d3_point[data-indexing="local"] text{
     fill: var(--light_point_local_txt_color);
   }
+  body:not([data-theme="dark"])
   div.app-local-to-global svg g.all_triangles polygon[data-active="1"],
+  body:not([data-theme="dark"])
   div.app-local-to-global svg g.all_triangles polygon[data-active="0"]:hover{
       fill: var(--light_triangle_active_color);
   }
+  body:not([data-theme="dark"])
   div.app-local-to-global svg g.all_triangles polygon[data-active="0"]{
     fill: var(--light_triangle_inactive_color);
   }
+}
+body[data-theme="light"]
+div.app-local-to-global p{
+  color: var(--light_foreground_color);
+}
+body[data-theme="light"]
+div.app-local-to-global p{
+  color: var(--light_foreground_color);
+}
+body[data-theme="light"]
+div.app-local-to-global svg g.all_triangles polygon.d3_triangle{
+  stroke: var(--light_stroke_color);
+}
+body[data-theme="light"]
+div.app-local-to-global svg g.all_pts circle{
+  fill: var(--light_background_color);
+  stroke: var(--light_stroke_color);
+}
+body[data-theme="light"]
+div.app-local-to-global svg g.all_pts text{
+  fill: var(--light_foreground_color);
+}
+body[data-theme="light"]
+div.app-local-to-global svg g.all_pts g.d3_point[data-indexing="global"] circle{
+  fill: var(--light_background_color);
+}
+body[data-theme="light"]
+div.app-local-to-global svg g.all_pts g.d3_point[data-indexing="global"] text{
+  fill: var(--light_point_txt_color);
+}
+body[data-theme="light"]
+div.app-local-to-global svg g.all_pts g.d3_point[data-indexing="local"] circle{
+  fill: var(--light_point_local_color);
+}
+body[data-theme="light"]
+div.app-local-to-global svg g.all_pts g.d3_point[data-indexing="local"] text{
+  fill: var(--light_point_local_txt_color);
+}
+body[data-theme="light"]
+div.app-local-to-global svg g.all_triangles polygon[data-active="1"],
+body[data-theme="light"]
+div.app-local-to-global svg g.all_triangles polygon[data-active="0"]:hover{
+    fill: var(--light_triangle_active_color);
+}
+body[data-theme="light"]
+div.app-local-to-global svg g.all_triangles polygon[data-active="0"]{
+  fill: var(--light_triangle_inactive_color);
 }
